# auto-palette

./: .codecov.yml  .editorconfig  .eslintignore  .gitignore  .knip.json  .lefthook.yml  .markdownlint.yml  .prettierignore  .rustfmt.toml  .taplo.toml  .tombi.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEBASE_REVIEW.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  biome.json  codecov.yml  justfile  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  tsconfig.base.json  tsconfig.json
.cargo/: config.toml
.claude/: settings.json
auto-palette-cli/: Cargo.toml  README.md
auto-palette-cli/src/: main.rs
auto-palette-wasm/: .eslintrc.json  .gitignore  .prettierignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  vite.config.ts
auto-palette-wasm/lib/: color.rs  palette.rs  position.rs  swatch.rs
auto-palette-wasm/src/: color.rs  color.ts  index.ts  palette.rs  palette.ts  swatch.ts
core/: Cargo.toml
core/benches/: algorithm.rs
core/src/: algorithm.rs  lib.rs  palette.rs  theme.rs
core/src/color/: color_struct.rs  lab.rs  xyz.rs
core/src/math/: mod.rs
core/src/math/clustering/dbscan/: label.rs
core/src/math/clustering/gmeans/: cmp.rs  mod.rs
core/src/math/clustering/hdbscan/: core_distance.rs  union_find.rs
core/src/math/graph/: edge.rs  graph_trait.rs  weighted_graph.rs
core/src/math/neighbors/kdtree/: search.rs
core/src/math/neighbors/linear/: search.rs
crates/auto-palette/: Cargo.toml  README.md  build.rs
crates/auto-palette-cli/: Cargo.toml  README.md
crates/auto-palette-cli/src/: args.rs  clipboard.rs  cmd.rs  color.rs  context.rs  env.rs  main.rs  output.rs  style.rs  table.rs
crates/auto-palette-cli/src/output/: json.rs  mod.rs  printer.rs  table.rs  text.rs
crates/auto-palette-cli/tests/: cli.rs
crates/auto-palette-wasm/: Cargo.toml  README.md  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts  vitest.workspace.ts
crates/auto-palette-wasm/src/: algorithm.rs  color.rs  json.rs  lib.rs  palette.rs  position.rs  swatch.rs  theme.rs  types.rs
crates/auto-palette-wasm/src/color/: mod.rs  rgb.rs
crates/auto-palette-wasm/test/: color.test.ts  palette.bench.ts  palette.browser.e2e.ts  palette.test.ts  setup.ts  swatch.test.ts
crates/auto-palette-wasm/test/matchers/: index.ts  toBeSimilarColor.test.ts
crates/auto-palette-wasm/test/utils/: color.ts  image.ts
crates/auto-palette/benches/: algorithm.rs
crates/auto-palette/examples/: README.md  algorithm.rs  basic.rs  image_path.rs  simple.rs  theme.rs
crates/auto-palette/src/: algorithm.rs  assert.rs  error.rs  image.rs  lib.rs  lut.rs  palette.rs  swatch.rs  theme.rs
crates/auto-palette/src/color/: ansi.rs  ansi16.rs  ansi256.rs  cmyk.rs  error.rs  gamut.rs  hsl.rs  hsv.rs  hue.rs  lab.rs  lchab.rs  lchuv.rs  luv.rs  mod.rs  oklab.rs  oklch.rs  rgb.rs  white_point.rs  xyz.rs
crates/auto-palette/src/image/: data.rs  error.rs  filter.rs  mod.rs  pixel.rs
crates/auto-palette/src/image/segmentation/: algorithm.rs  label.rs  method.rs  mod.rs  seed.rs  segment.rs
crates/auto-palette/src/image/segmentation/dbscan/: algorithm.rs  config.rs  error.rs  mod.rs
crates/auto-palette/src/image/segmentation/fastdbscan/: algorithm.rs  config.rs  mod.rs
crates/auto-palette/src/image/segmentation/kmeans/: algorithm.rs  config.rs  error.rs  mod.rs
crates/auto-palette/src/image/segmentation/slic/: algorithm.rs  config.rs  error.rs  mod.rs
crates/auto-palette/src/image/segmentation/snic/: algorithm.rs  config.rs  error.rs  mod.rs
crates/auto-palette/src/math/: gaussian.rs  matrix.rs  metrics.rs  mod.rs  number.rs  point.rs  sampling.rs  stats.rs
crates/auto-palette/src/math/clustering/: algorithm.rs  cluster.rs  cmp.rs  dbscan.rs  dbscanpp.rs  helper.rs  initializer.rs  kmeans.rs  mod.rs  slic.rs  snic.rs
crates/auto-palette/src/math/clustering/dbscan/: algorithm.rs
crates/auto-palette/src/math/clustering/gmeans/: algorithm.rs
crates/auto-palette/src/math/clustering/hdbscan/: core_distance.rs
crates/auto-palette/src/math/clustering/hierarchical/: algorithm.rs  dendrogram.rs  linkage.rs  mod.rs  node.rs  priority.rs
crates/auto-palette/src/math/clustering/kmeans/: algorithm.rs  error.rs  init.rs  mod.rs
crates/auto-palette/src/math/graph/: mod.rs  weighted_edge.rs
crates/auto-palette/src/math/neighbors/: kdtree.rs  linear.rs  mod.rs  neighbor.rs  search.rs
crates/auto-palette/src/math/sampling/: algorithm.rs  diversity.rs  error.rs  farthest.rs  mod.rs  strategy.rs  weighted_farthest.rs
crates/auto-palette/src/segmentation/: algorithm.rs  error.rs  input.rs  label.rs  method.rs  mod.rs  result.rs  seed.rs  segment.rs
crates/auto-palette/src/segmentation/dbscan/: algorithm.rs  config.rs  mod.rs
crates/auto-palette/src/segmentation/fastdbscan/: algorithm.rs  config.rs  error.rs  mod.rs
crates/auto-palette/src/segmentation/kmeans/: algorithm.rs  config.rs  mod.rs
crates/auto-palette/src/segmentation/slic/: algorithm.rs  config.rs  mod.rs
crates/auto-palette/src/segmentation/snic/: algorithm.rs  config.rs  error.rs  mod.rs
crates/auto-palette/tests/: extract.rs  palette.rs
crates/core/: Cargo.toml
crates/core/examples/: README.md  algorithm.rs  basic.rs  image_path.rs  theme.rs
crates/core/src/: algorithm.rs  errors.rs  image.rs  palette.rs  swatch.rs  theme.rs
crates/core/src/color/: mod.rs
crates/core/src/image/: data.rs  errors.rs
crates/core/src/math/clustering/: cluster.rs  dbscan.rs
crates/core/src/math/neighbors/: kdtree.rs  search.rs
crates/core/tests/: palette.rs
crates/wasm/: Cargo.toml  README.md
crates/wasm/src/: algorithm.rs  color.rs  lab.rs  lib.rs  palette.rs  position.rs  rgb.rs  swatch.rs  theme.rs  xyz.rs
crates/wasm/src/color/: lab.rs  xyz.rs
wasm/: .eslintignore  .eslintrc.json  .npmignore  .prettierrc.json  Cargo.toml  package.json  tsconfig.json
wasm/lib/: color.rs  palette.rs  position.rs  swatch.rs
wasm/src/: color.rs  guards.ts  image.ts  index.ts  lib.rs  palette.rs  palette.ts  position.rs  swatch.rs  swatch.ts
(+155 files in other folders)
