[workspace]
resolver = "2"
members  = ["crates/*"]

[workspace.package]
edition    = "2021"
version    = "0.6.0"
authors    = ["Tatsuya Maki <t28oogle@gmail.com>"]
license    = "MIT"
homepage   = "https://github.com/t28hub/auto-palette"
repository = "https://github.com/t28hub/auto-palette"

[workspace.dependencies]
anyhow                   = "1.0.97"
arboard                  = "3.4.1"
assert_cmd               = "2.0.14"
auto-palette             = { version = "0.6.0", path = "crates/auto-palette", default-features = false }
clap                     = { version = "4.5.4", features = ["cargo"] }
getrandom                = "0.3.1"
image                    = "0.25.1"
num-traits               = "0.2.18"
predicates               = "3.1.0"
rand                     = "0.9.0"
rand_distr               = "0.5.0"
rstest                   = "0.25.0"
serde                    = { version = "1.0.117", features = ["derive"] }
serde_json               = "1.0.117"
serde_test               = "1.0.117"
thiserror                = "2.0.12"
wasm-bindgen-test        = "0.3.50"
console_error_panic_hook = "0.1.7"
wasm-bindgen             = "0.2.100"

[profile.dev]
opt-level = 3

[profile.test]
opt-level = 3

[profile.release]
lto       = true
opt-level = 'z'
