[workspace]
resolver = "2"
members  = ["crates/*"]

[workspace.package]
edition    = "2021"
version    = "0.9.0"
authors    = ["Tatsuya Maki <t28oogle@gmail.com>"]
license    = "MIT"
homepage   = "https://github.com/t28hub/auto-palette"
repository = "https://github.com/t28hub/auto-palette"

[workspace.dependencies]
anyhow             = "1.0.97"
arboard            = "3.4.1"
assert_cmd         = "2.0.14"
auto-palette       = { version = "0.9.0", path = "crates/auto-palette", default-features = false }
clap               = { version = "4.5.4", features = ["cargo"] }
divan              = { version = "2.10.1", package = "codspeed-divan-compat" }
image              = { version = "0.25.1", default-features = false }
num-traits         = "0.2.18"
predicates         = "3.1.0"
rstest             = "0.25.0"
serde              = { version = "1.0.117", features = ["derive"] }
serde_json         = "1.0.117"
serde_test         = "1.0.117"
serde-wasm-bindgen = "0.6.5"
thiserror          = "2.0.12"
wasm-bindgen-test  = "0.3.50"
wasm-bindgen       = "0.2.100"
web-sys            = "0.3.77"

[profile.dev]
opt-level = 3

[profile.test]
opt-level = 3

[profile.release]
lto       = true
opt-level = 'z'
