[workspace]
resolver = "2"
members  = ["crates/*"]

[workspace.package]
version    = "0.9.2"
authors    = ["Tatsuya Maki <t28oogle@gmail.com>"]
edition    = "2021"
homepage   = "https://github.com/t28hub/auto-palette"
repository = "https://github.com/t28hub/auto-palette"
license    = "MIT"

[workspace.dependencies]
anyhow             = "1.0.97"
arboard            = "3.4.1"
assert_cmd         = "2.0.14"
auto-palette       = { path = "crates/auto-palette", version = "0.9.2", default-features = false }
clap               = { version = "4.5.4", features = ["cargo"] }
divan              = { package = "codspeed-divan-compat", version = "3.0.3" }
image              = { version = "0.25.1", default-features = false }
num-traits         = "0.2.18"
predicates         = "3.1.0"
rstest             = "0.26.1"
rustc-hash         = "2.1.1"
serde              = { version = "1.0.117", features = ["derive"] }
serde_json         = "1.0.117"
serde_test         = "1.0.117"
serde-wasm-bindgen = "0.6.5"
thiserror          = "2.0.12"
wasm-bindgen       = "0.2.100"
wasm-bindgen-test  = "0.3.50"
web-sys            = "0.3.77"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = "z"
lto       = true

[profile.test]
opt-level = 3
