[package]
name                 = "auto-palette-cli"
description          = "🎨 A CLI tool to extract prominent color palettes from images."
readme               = "./README.md"
categories           = ["graphics", "algorithms", "multimedia::images", "command-line-utilities"]
keywords             = ["palette", "color", "image", "color-palette", "color-extraction"]
edition.workspace    = true
version.workspace    = true
authors.workspace    = true
license.workspace    = true
homepage.workspace   = true
repository.workspace = true

# `cargo msrv` does not support `rust-version.workspace` yet.
# https://github.com/foresterre/cargo-msrv/issues/590
rust-version = "1.84.0"

[dependencies]
anyhow       = { workspace = true }
arboard      = { workspace = true }
auto-palette = { workspace = true, features = ["image"] }
clap         = { workspace = true, features = ["derive"] }
image        = { workspace = true, default-features = true }
serde_json   = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
rstest     = { workspace = true }
