[package]
name                 = "auto-palette-cli"
version.workspace    = true
authors.workspace    = true
edition.workspace    = true
# `cargo msrv` does not support `rust-version.workspace` yet.
# https://github.com/foresterre/cargo-msrv/issues/590
rust-version         = "1.86.0"
description          = "🎨 CLI tool to extract a prominent color palette from an image."
readme               = "./README.md"
homepage.workspace   = true
repository.workspace = true
license.workspace    = true
keywords             = ["color", "color-extraction", "color-palette", "image", "palette"]
categories           = ["algorithms", "command-line-utilities", "graphics", "multimedia::images"]

[dependencies]
anyhow       = { workspace = true }
arboard      = { workspace = true }
auto-palette = { workspace = true, features = ["image"] }
clap         = { workspace = true, features = ["derive"] }
image        = { workspace = true, default-features = true }
serde_json   = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
rstest     = { workspace = true }
