[package]
name                 = "auto-palette-wasm"
description          = "🎨 A WebAssembly binding for auto-palette, allowing it to automatically extract color palettes from images."
publish              = false
readme               = "./README.md"
categories           = ["wasm", "multimedia::images", "graphics", "algorithms"]
keywords             = ["palette", "color", "image", "color-palette", "webassembly"]
edition.workspace    = true
version.workspace    = true
authors.workspace    = true
license.workspace    = true
homepage.workspace   = true
repository.workspace = true

# `cargo msrv` does not support `rust-version.workspace` yet.
# https://github.com/foresterre/cargo-msrv/issues/590
rust-version = "1.84.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
auto-palette = { workspace = true, features = ["wasm"] }
serde        = { workspace = true, features = ["derive"] }
tsify        = { workspace = true }
wasm-bindgen = { workspace = true }

[dev-dependencies]
image             = { workspace = true, features = ["jpeg", "png"] }
wasm-bindgen-test = { workspace = true }
