[package]
name                 = "auto-palette-wasm"
version.workspace    = true
authors.workspace    = true
edition.workspace    = true
# https://github.com/foresterre/cargo-msrv/issues/590
rust-version         = "1.86.0"
description          = "🎨 A WebAssembly binding for auto-palette, allowing it to automatically extract color palettes from images."
readme               = "./README.md"
homepage.workspace   = true
repository.workspace = true
license.workspace    = true
keywords             = ["color", "color-palette", "image", "palette", "webassembly"]
categories           = ["algorithms", "graphics", "multimedia::images", "wasm"]
publish              = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
auto-palette       = { workspace = true, features = ["wasm"] }
serde              = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = { workspace = true }
wasm-bindgen       = { workspace = true }
web-sys            = { workspace = true, features = ["ImageData"] }

[dev-dependencies]
serde_test        = { workspace = true }
wasm-bindgen-test = { workspace = true }
