[package]
name                 = "auto-palette"
description          = "🎨 A Rust library that extracts prominent color palettes from images automatically."
readme               = "./README.md"
categories           = ["multimedia::images", "graphics", "algorithms", "mathematics"]
keywords             = ["palette", "color", "image", "color-palette", "color-extraction"]
edition.workspace    = true
version.workspace    = true
authors.workspace    = true
license.workspace    = true
homepage.workspace   = true
repository.workspace = true

# `cargo msrv` does not support `rust-version.workspace` yet
# https://github.com/foresterre/cargo-msrv/issues/590
rust-version = "1.84.0"

[features]
default = ["image"]
image   = ["dep:image"]
wasm    = ["getrandom/wasm_js", "dep:serde"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }

[dependencies]
getrandom  = { workspace = true }
image      = { workspace = true, optional = true }
num-traits = { workspace = true }
rand       = { workspace = true }
rand_distr = { workspace = true }
serde      = { workspace = true, optional = true }
thiserror  = { workspace = true }

[dev-dependencies]
rstest     = { workspace = true }
serde_test = { workspace = true }

[[example]]
name              = "basic"
path              = "examples/basic.rs"
required-features = ["image"]

[[example]]
name              = "algorithm"
path              = "examples/algorithm.rs"
required-features = ["image"]

[[example]]
name              = "theme"
path              = "examples/theme.rs"
required-features = ["image"]
