[package]
name                 = "auto-palette"
version.workspace    = true
authors.workspace    = true
edition.workspace    = true
# `cargo msrv` does not support `rust-version.workspace` yet
# https://github.com/foresterre/cargo-msrv/issues/590
rust-version         = "1.86.0"
description          = "🎨 A Rust library that extracts prominent color palettes from images automatically."
readme               = "./README.md"
homepage.workspace   = true
repository.workspace = true
license.workspace    = true
keywords             = ["color", "color-extraction", "color-palette", "image", "palette"]
categories           = ["algorithms", "graphics", "mathematics", "multimedia::images"]

[[example]]
name              = "simple"
path              = "examples/simple.rs"
required-features = ["image"]

[[example]]
name              = "algorithm"
path              = "examples/algorithm.rs"
required-features = ["image"]

[[example]]
name              = "theme"
path              = "examples/theme.rs"
required-features = ["image"]

[[bench]]
harness = false
name    = "algorithm"

[dependencies]
image      = { workspace = true, optional = true }
num-traits = { workspace = true }
rustc-hash = { workspace = true }
serde      = { workspace = true, optional = true }
thiserror  = { workspace = true }

[dev-dependencies]
anyhow     = { workspace = true }
divan      = { workspace = true }
image      = { workspace = true, features = ["jpeg", "png"] }
rstest     = { workspace = true }
serde_test = { workspace = true }

[features]
default = ["image"]
image   = ["dep:image"]
wasm    = ["dep:serde"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(coverage,coverage_nightly)"] }
