[package]
name                 = "auto-palette-wasm"
description          = "🎨 A WebAssembly binding for auto-palette, allowing it to automatically extract color palettes from images."
readme               = "../../README.md"
categories           = ["wasm", "multimedia::images", "graphics", "algorithms"]
keywords             = ["palette", "color", "image", "color-palette", "webassembly"]
edition.workspace    = true
version.workspace    = true
authors.workspace    = true
license.workspace    = true
homepage.workspace   = true
repository.workspace = true
# `cargo msrv` does not support `rust-version.workspace` yet.
# https://github.com/foresterre/cargo-msrv/issues/590
rust-version = "1.75.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
auto-palette       = { path = "../core" }
getrandom          = { version = "0.2.14", features = ["js"] }
image              = "0.25.1"
js-sys             = "0.3.69"
serde              = { version = "1.0.199", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen       = "0.2.92"

[dev-dependencies]
rstest            = "0.19.0"
serde_test        = "1.0.176"
wasm-bindgen-test = "0.3.42"
